# khora-graphrag-benchmark

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
scripts/: aggregate_runs.py  prune-tmp.sh  rescore_paper_judge.py
src/khora_graphrag_bench/: __init__.py  cli.py
src/khora_graphrag_bench/adapters/: khora.py
src/khora_graphrag_bench/datasets/: converters.py  loader.py  schema.py
src/khora_graphrag_bench/harness/: analysis.py  base.py  evaluation.py  model_utils.py  results.py  runner.py  text_utils.py  token_counting.py
src/khora_graphrag_bench/reporters/: __init__.py  _reference.py  aggregate.py  html.py  json_writer.py  markdown.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_adapter.py  test_adapter_internals.py  test_aggregate.py  test_analysis.py  test_base.py  test_cli.py  test_cli_run.py  test_converters.py  test_evaluation.py  test_loader.py  test_model_utils.py  test_reporters.py  test_results.py  test_runner.py  test_schema.py  test_text_utils.py  test_token_counting.py
